; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/mfiutil/extr_mfi_config.c_mfi_config_read_opcode.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/mfiutil/extr_mfi_config.c_mfi_config_read_opcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mfi_config_data = type { i32 }

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mfi_config_read_opcode(i32 %0, i32 %1, %struct.mfi_config_data** %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.mfi_config_data**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.mfi_config_data*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store %struct.mfi_config_data** %2, %struct.mfi_config_data*** %9, align 8
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  store %struct.mfi_config_data* null, %struct.mfi_config_data** %12, align 8
  store i32 1024, i32* %13, align 4
  br label %15

15:                                               ; preds = %42, %5
  %16 = load %struct.mfi_config_data*, %struct.mfi_config_data** %12, align 8
  %17 = load i32, i32* %13, align 4
  %18 = call %struct.mfi_config_data* @reallocf(%struct.mfi_config_data* %16, i32 %17)
  store %struct.mfi_config_data* %18, %struct.mfi_config_data** %12, align 8
  %19 = load %struct.mfi_config_data*, %struct.mfi_config_data** %12, align 8
  %20 = icmp eq %struct.mfi_config_data* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %15
  store i32 -1, i32* %6, align 4
  br label %49

22:                                               ; preds = %15
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load %struct.mfi_config_data*, %struct.mfi_config_data** %12, align 8
  %26 = load i32, i32* %13, align 4
  %27 = load i32*, i32** %10, align 8
  %28 = load i64, i64* %11, align 8
  %29 = call i64 @mfi_dcmd_command(i32 %23, i32 %24, %struct.mfi_config_data* %25, i32 %26, i32* %27, i64 %28, i32* null)
  %30 = icmp slt i64 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %22
  %32 = load i32, i32* @errno, align 4
  store i32 %32, i32* %14, align 4
  %33 = load %struct.mfi_config_data*, %struct.mfi_config_data** %12, align 8
  %34 = call i32 @free(%struct.mfi_config_data* %33)
  %35 = load i32, i32* %14, align 4
  store i32 %35, i32* @errno, align 4
  store i32 -1, i32* %6, align 4
  br label %49

36:                                               ; preds = %22
  %37 = load %struct.mfi_config_data*, %struct.mfi_config_data** %12, align 8
  %38 = getelementptr inbounds %struct.mfi_config_data, %struct.mfi_config_data* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* %13, align 4
  %41 = icmp sgt i32 %39, %40
  br i1 %41, label %42, label %46

42:                                               ; preds = %36
  %43 = load %struct.mfi_config_data*, %struct.mfi_config_data** %12, align 8
  %44 = getelementptr inbounds %struct.mfi_config_data, %struct.mfi_config_data* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  store i32 %45, i32* %13, align 4
  br label %15

46:                                               ; preds = %36
  %47 = load %struct.mfi_config_data*, %struct.mfi_config_data** %12, align 8
  %48 = load %struct.mfi_config_data**, %struct.mfi_config_data*** %9, align 8
  store %struct.mfi_config_data* %47, %struct.mfi_config_data** %48, align 8
  store i32 0, i32* %6, align 4
  br label %49

49:                                               ; preds = %46, %31, %21
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local %struct.mfi_config_data* @reallocf(%struct.mfi_config_data*, i32) #1

declare dso_local i64 @mfi_dcmd_command(i32, i32, %struct.mfi_config_data*, i32, i32*, i64, i32*) #1

declare dso_local i32 @free(%struct.mfi_config_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
